deployment.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  namespace: nodejs
spec:
  rules:
  - host: nodejs.example.com
    http:
      paths:
      - backend:
          serviceName: nodejs-srv
          servicePort: 80
        path: /
---
apiVersion: v1
kind: Service
metadata:
  name: lbservice
spec:
  selector:
    app: nodejs
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
  loadbalancerIP: 192.168.0.101
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs
  namespace: nodejs
  name: nodejs-srv
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
   - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: nodejs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejs
  name: nodejs
  namespace: nodejs
spec:
  selector:
    matchLabels:
      app: nodejs
  replicas: 5
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      hostNetwork: false
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - nodejs
            topologyKey: failure-domain.beta.kubernetes.io/zone
      containers:
      - image: nodejs-app
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: "0.1"
            memory: "128M"
          limits:
            cpu: "1"
            memory: "128M"
        name: nodejs-pod
        ports:
        - containerPort: 80
